Criação do footer da branch 01 :D

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
         Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.
     </p>
 
-    <div>
+    <div id="form">
         <form action="">
             <input type="text" placeholder="Login">
             <input type="text" placeholder="Senha">
             <input type="submit" placeholder="Logar">
         </form>
     </div>
+
+    <footer>
+        <p>eu sou um footer :D</p>
+        <P>Todos os direitos Reservados.</P>
+    </footer>
 </body>
 </html>
