--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital Teste</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Hospital São Julião</h1>
@@ -13,12 +14,12 @@
         Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.
     </p>
 
-    <div id="nav">
+    <nav>
         <a href="#"> Home </a>
         <a href="#"> Sobre </a>
-        <a href="#"> Leitos </a>
-        <a href="#"> Transporte </a>
-    </div>
+        <a href="#"> Leitos </a> 
+        <a href="#"> Transporte </a> 
+    </nav>
     <div id="form">
         <form action="">
             <input type="text" placeholder="Login">
